# image-quilting

./: .gitattributes  CMakeLists.txt  README.md
include/: ErrorMetrics.h  SeamCarving.h  TextureQuilter.h
src/: ErrorMetrics.cpp  SeamCarving.cpp  TextureQuilter.cpp  main.cpp
